--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="./assets/Header/kkd_logo.png">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700|Open+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Mukta+Malar|Ramaraja|Sree+Krushnadevaraya|Suranna" rel="stylesheet">
 </head>
 
 <body>
