code indentation and location modal

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 <body>
   <app-root></app-root>
 </body>
-<script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyBubb5ih9BsthH34K17mxcr_YWQJoE4qW4"></script>
+<script src="https://maps.googleapis.com/maps/api/js?sensor=false&libraries=geometry&key=AIzaSyBubb5ih9BsthH34K17mxcr_YWQJoE4qW4"></script>
 <script src="./assets/js/numscroller-1.0.js"></script>
 
 </html>
